<resources>
    <string name="app_name">Dicoding Events</string>
    <string name="title_home">Home</string>
    <string name="title_finished">Finished Events</string>
    <string name="title_upcoming">Upcoming Events</string>
    <string name="title_favorite">Favorite Events</string>
    <string name="title_setting">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>