<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/baseline_hourglass_top_24"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/baseline_check_circle_24"
        android:title="@string/title_finished" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/title_setting" />


</menu>